Fix spacing.

--- a/app/public/assets/css/marketplace.css
+++ b/app/public/assets/css/marketplace.css
@@ -5,12 +5,16 @@
 }
 
 .badge {
-    padding: 0 0.9em;
+    padding: 0.1675em 0.9em 0;
     line-height: 1.90;
+    font-weight: 300;
 }
 
 .badge-success {
-    background-color: #53ce55;
+    background-color: transparent;
+    color: #53ce55;
+    font-weight: 600;
+    border: 1px solid #53ce55;
 }
 .badge-primary {
     background-color: #5553ce;
@@ -29,7 +33,8 @@
 .card {
     margin-right: 0 !important;
     margin-left: 0 !important;
-    padding: 15px;
+    padding: 0 15px;
     border-radius: 0;
     border-left: 15px solid #53ce55;
+    vertical-align: baseline;
 }
